<resources>
    <string name="app_name">Castles</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Which castles are there?</string>
    <string name="second_fragment_label">Set Castles</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="cnt_castles">Which castles are there?</string>

    <string name="castle">Castle</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="lilac">Lilac</string>
    <string name="blue">Blue</string>

    <string name="start">Start</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="done">Done</string>
    <string name="score">Final score</string>
    <string name="winner">Winner</string>
    <string name="player">Player</string>

    <string name="too_little_castles_error">"Need 3"</string>

    <string name="yellow_room">Dining room</string>
    <string name="purple_room">Living room</string>
    <string name="orange_room">Utility room</string>
    <string name="green_room">Garden</string>
    <string name="blue_room">Sleeping chamber</string>
    <string name="gray_room">Corridor</string>
    <string name="black_room">Basement</string>
    <string name="tower_room">Tower</string>
    <string name="foyer_room">Grand foyer</string>
    <string name="fountain_room">Fountain</string>
    <string name="card_room">Orange card</string>
    <string name="attendant_room">Royal attendant</string>
    <string name="throne_room">Throne room</string>

    <string name="pound" translatable="false">#</string>
    <string name="title_activity_main2">Leanback MainActivity2</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>